# small-esperanto-llm

./: .gitignore  pyproject.toml
benchmarks/: factual_qa.json
configs/: large.yaml  medium.yaml  small.yaml  tiny.yaml
scripts/: agent_sim_poc.py  bench_samplers.py  benchmark.py  build_stem_freq.py  chat.py  demo_kitchen.py  diag_no_sample.py  download_data.py  download_from_hub.py  download_gutenberg.py  download_hplt.py  download_mc4.py  evaluate_coherence.py  explore_traces.py  extract_eo_factoids.py  forward_sampler.py  generate.py  generate_arithmetic_cot.py  generate_corpus.py  generate_factoids.py  generate_kitchen_corpus.py  generate_sft_creative.py  generate_sft_from_factoids.py  grpo_baseline.py  plan_diversity.py  push_to_hub.py  run_regression_parallel.py  setup_vastai.sh  train_grpo.py  train_morpheme_tokenizer.py  train_sft.py  train_tokenizer.py  train_word2vec.py  translate_gsm8k.py
src/esperanto_lm/: __init__.py  config.py  data.py  evaluate.py  factoids.py  model.py  morphology.py  train.py  verify.py
src/esperanto_lm/ontology/: CLAUDE.md  __init__.py  causal.py  concept_index.py  containment.py  entity_index.py  fact_table.py  loader.py  morph.py  realize.py  rules.py  sampler.py  schemas.py  types.py
src/esperanto_lm/ontology/agent/: __init__.py  coverage.py  dispatcher.py  drive_sampler.py  forward_planner.py  loop.py  planner.py  preferences.py  role_binding.py
src/esperanto_lm/ontology/data/: actions.jsonl  affixes.jsonl  concepts.jsonl  containment.jsonl  person_names.jsonl  qualities.jsonl  relations.jsonl  slots.jsonl  types.json
src/esperanto_lm/ontology/dsl/: __init__.py  bake.py  compile.py  effects.py  engine.py  implications.py  introspect.py  patterns.py  rules.py  unifier.py
src/esperanto_lm/ontology/realize/: __init__.py  messages.py  plan.py  render.py
src/esperanto_lm/ontology/regression/: __init__.py  goal_sampler.py  goals.py  scene_builder.py  scene_params.py  seeders.py  spawner.py
tests/: test_data.py  test_dsl_compile.py  test_dsl_phase5_lexicon.py  test_model.py  test_ontology_cascade_rules.py  test_ontology_causal.py  test_ontology_containment.py  test_ontology_dsl.py  test_ontology_event_calculus.py  test_ontology_load.py  test_ontology_rules_extra.py  test_ontology_sampler_realize.py  test_pattern_matching_invariants.py  test_realizer_messages.py  test_train_step.py
